--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
       <div class="card">
         <h4>Content Calendar</h4>
         <p>Detailed monthly social content planning sheet.</p>
-        <a href="Content_Calendar.pdf">Content_Calendar.pdf</a>
+        <a href="https://drive.google.com/drive/u/0/folders/1_Def1YpsLMUx7osHqNFJSrjMHFJ2JpIY">Content_Calendar.pdf</a>
       </div>
       <div class="card">
         <h4>Social Media Policy</h4>
