--- a/index.html
+++ b/index.html
@@ -163,15 +163,17 @@
     </ul>
 </section>
 
-  <section>
-    <h2>My Professional Experience</h2>
-    <ul>
-      <li><strong>Team Member – Tim Hortons&nbsp;</strong>(April 2024 – Present)<br>
-        Responsible for delivering excellent customer service, maintaining product quality, and assisting with daily operations in a fast-paced environment. Developed strong teamwork, communication, and multitasking skills while adhering to workplace health and safety standards.
-      </li>
-    </ul>
+ <section> 
+  <h2>My Professional Experience</h2>
+  <ul>
+    <li><strong>Team Member – Tim Hortons</strong> (April 2024 – Present)<br>
+      Responsible for delivering excellent customer service, maintaining product quality, and assisting with daily operations in a fast-paced environment. Developed strong teamwork, communication, and multitasking skills while adhering to workplace health and safety standards.
+    </li>
+    <li><strong>Content Writer – Proma (Volunteer Role)</strong> (August 2019 – March 2023)<br>
+      Tailored content according to the target audience and platform. Incorporated relevant keywords naturally into content to improve search engine rankings. Participated in brainstorming and content strategy sessions. Modified content strategy based on user behavior and feedback.
+    </li>
+  </ul>
 </section>
-
   <section class="highlight-section">
     <h2>Highlights of My Academic Projects</h2>
     <ul>
